--- a/css/fontawesome.css
+++ b/css/fontawesome.css
@@ -124,6 +124,7 @@
     -webkit-transform: rotate(360deg);
             transform: rotate(360deg); } }
 
+/*
 .fa-rotate-90 {
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=1)";
   -webkit-transform: rotate(90deg);
@@ -153,6 +154,7 @@
   -ms-filter: "progid:DXImageTransform.Microsoft.BasicImage(rotation=2, mirror=1)";
   -webkit-transform: scale(-1, -1);
           transform: scale(-1, -1); }
+*/
 
 :root .fa-rotate-90,
 :root .fa-rotate-180,
